--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js --ignore '*.json'",
-    "start": "NODE_ENV=production node index.js",
-    "build": ""
+    "start": "node index.js"
   },
   "dependencies": {
     "pathfinding": "^0.4.18",
