--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,12 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js --ignore '*.json'",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "echo 'No actual build step'"
   },
   "dependencies": {
     "pathfinding": "^0.4.18",
-    "socket.io": "^4.7.2"
-  },
-  "devDependencies": {
+    "socket.io": "^4.7.2",
     "nodemon": "^3.0.1"
   }
 }
