--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "pathfinding": "^0.4.18",
-    "socket.io": "^4.7.2",
+    "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
